# d1

./: AGENTS.md  README.md  main.py  pyproject.toml
d1/: __init__.py  agent.py  app.py  prompts.py
d1/agents/: __init__.py  pet_agent.py
d1/models/: __init__.py  factory.py  local.py
d1/ui/: __init__.py  duck_overlay.py  window.py  worker.py
scripts/: draw_dialog.py  test_grok_api.py
